# Cursor-Agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: workflow.md
.codex/: debugging.md
.cursor/rules/: ai-agent.mdc  architecture.mdc  development-workflow.mdc  documentation.mdc  github.mdc  python.mdc  testing.mdc
.github/workflows/: ci.yml
docs/: configuration.md
docs/architecture/: README.md
examples/: README.md
scripts/: check.py
src/research_agent/: __init__.py  config.py  logging_config.py
src/research_agent/application/: __init__.py  bootstrap.py  research_agent.py
src/research_agent/domain/: __init__.py  entities.py  providers.py
src/research_agent/infrastructure/: __init__.py
src/research_agent/infrastructure/config/: __init__.py  loader.py  settings.py
src/research_agent/infrastructure/di/: __init__.py  container.py
src/research_agent/infrastructure/logging/: __init__.py  setup.py
src/research_agent/infrastructure/providers/: __init__.py  factory.py
src/research_agent/infrastructure/providers/llm/: mock.py  openai.py
src/research_agent/infrastructure/providers/search/: mock.py
src/research_agent/infrastructure/retry/: __init__.py  policy.py  retry.py
src/research_agent/interfaces/: __init__.py  cli.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: test_config.py  test_logging_config.py  test_package.py
tests/unit/application/: test_bootstrap.py  test_research_agent.py
tests/unit/domain/: test_entities.py  test_providers.py
tests/unit/infrastructure/di/: test_container.py
tests/unit/infrastructure/providers/: test_factory.py  test_mock_llm.py  test_mock_search.py  test_openai_llm.py
tests/unit/infrastructure/retry/: test_policy.py  test_retry.py
tests/unit/interfaces/: test_cli.py
